@@ -8,11 +8,11 @@
 #include <sys/types.h>
 #include <sys/syscall.h>
 #include <sched.h>
-
+#include <signal.h>
 static int loops = 15; // each thread+main will do this amount of loop
 static int sleepms = 1000; // in each loop, will sleep "sleepms" milliseconds
 static int burn = 0; // after each sleep, will burn cpu in a tight 'burn' loop 
-
+static void setup_sigusr_handler(void); // sigusr1 and 2 sigaction setup.
 
 static pid_t gettid()
 {
@@ -133,7 +133,7 @@ int main (int argc, char *argv[])
   struct spec b, l, p, m;
   char *some_mem __attribute__((unused)) = malloc(100);
   setaffinity();
-
+  setup_sigusr_handler();
   if (argc > 1)
      loops = atoi(argv[1]);
 
@@ -194,3 +194,24 @@ int main (int argc, char *argv[])
 
   return 0;
 }
+
+static int sigusr1_received = 0;
+static void sigusr1_handler(int signr)
+{
+   sigusr1_received++;
+}
+static void setup_sigusr_handler(void)
+{
+   struct sigaction sa;
+   sa.sa_handler = sigusr1_handler;
+   sigemptyset(&sa.sa_mask);
+   sa.sa_flags = 0;
+
+   if (sigaction (SIGUSR1, &sa, NULL) != 0)
+      perror("sigaction SIGUSR1");
+
+   sa.sa_handler = SIG_IGN;
+   if (sigaction (SIGUSR2, &sa, NULL) != 0)
+      perror("sigaction SIGUSR2");
+}
+
